--- a/twitter/Base.lproj/Main.storyboard
+++ b/twitter/Base.lproj/Main.storyboard
@@ -298,86 +298,104 @@
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rjs-Lh-cOl">
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rjs-Lh-cOl">
                                 <rect key="frame" x="0.0" y="144" width="428" height="301"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Ko-xI-MJ2">
-                                        <rect key="frame" x="25" y="8" width="91" height="91"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Ko-xI-MJ2">
+                                        <rect key="frame" x="16" y="8" width="93" height="91"/>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Handle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hQ1-DE-2Wb">
-                                        <rect key="frame" x="136" y="37" width="224" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Handle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hQ1-DE-2Wb">
+                                        <rect key="frame" x="125" y="53" width="54" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Text" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lfc-We-Xbo">
-                                        <rect key="frame" x="24" y="121" width="380" height="52"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5fd-7f-N98">
+                                        <rect key="frame" x="16" y="181" width="36" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BWZ-T3-mnG">
-                                        <rect key="frame" x="25" y="221" width="42" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Retweets" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BWZ-T3-mnG">
+                                        <rect key="frame" x="16" y="221" width="71" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bZg-Ve-I2M">
-                                        <rect key="frame" x="150" y="221" width="42" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Likes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bZg-Ve-I2M">
+                                        <rect key="frame" x="180" y="221" width="40" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BP9-QS-mSD">
-                                        <rect key="frame" x="136" y="8" width="224" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BP9-QS-mSD">
+                                        <rect key="frame" x="125" y="24" width="45" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CFD-xs-Zd8">
-                                        <rect key="frame" x="18" y="256" width="58" height="44"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CFD-xs-Zd8">
+                                        <rect key="frame" x="36" y="256" width="58" height="44"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="reply-icon" title=" "/>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J46-XW-P9y">
-                                        <rect key="frame" x="136" y="256" width="58" height="44"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J46-XW-P9y">
+                                        <rect key="frame" x="166" y="256" width="58" height="44"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="retweet-icon" title=" "/>
                                         <connections>
                                             <action selector="didTapRetweet:" destination="q7y-BI-Ngf" eventType="touchUpInside" id="za2-pi-Rfy"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gdh-nk-aRE">
-                                        <rect key="frame" x="256" y="256" width="58" height="44"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gdh-nk-aRE">
+                                        <rect key="frame" x="296" y="256" width="58" height="44"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="favor-icon" title=" "/>
                                         <connections>
                                             <action selector="didTapLike:" destination="q7y-BI-Ngf" eventType="touchUpInside" id="cX7-p5-rNS"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5fd-7f-N98">
-                                        <rect key="frame" x="24" y="181" width="36" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Text" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lfc-We-Xbo">
+                                        <rect key="frame" x="16" y="121" width="380" height="52"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="Gdh-nk-aRE" firstAttribute="top" secondItem="CFD-xs-Zd8" secondAttribute="top" id="2Bm-tI-Foj"/>
+                                    <constraint firstItem="Lfc-We-Xbo" firstAttribute="top" secondItem="8Ko-xI-MJ2" secondAttribute="bottom" constant="24" id="7TL-Av-aKN"/>
+                                    <constraint firstItem="BWZ-T3-mnG" firstAttribute="leading" secondItem="8Ko-xI-MJ2" secondAttribute="leading" id="9eE-fI-rgh"/>
+                                    <constraint firstItem="5fd-7f-N98" firstAttribute="top" secondItem="Lfc-We-Xbo" secondAttribute="bottom" constant="16" id="Ajq-MA-gmP"/>
+                                    <constraint firstItem="hQ1-DE-2Wb" firstAttribute="top" secondItem="BP9-QS-mSD" secondAttribute="bottom" constant="8" id="IYV-9q-Aqh"/>
+                                    <constraint firstItem="bZg-Ve-I2M" firstAttribute="top" secondItem="BWZ-T3-mnG" secondAttribute="top" id="Jfb-5f-Psa"/>
+                                    <constraint firstItem="5fd-7f-N98" firstAttribute="leading" secondItem="Lfc-We-Xbo" secondAttribute="leading" id="Jkf-yO-RE4"/>
+                                    <constraint firstItem="CFD-xs-Zd8" firstAttribute="leading" secondItem="rjs-Lh-cOl" secondAttribute="leading" constant="36" id="Kap-F7-4Gq"/>
+                                    <constraint firstItem="J46-XW-P9y" firstAttribute="top" secondItem="CFD-xs-Zd8" secondAttribute="top" id="NgK-Gy-9r2" userLabel=".top =  .top"/>
+                                    <constraint firstItem="hQ1-DE-2Wb" firstAttribute="leading" secondItem="BP9-QS-mSD" secondAttribute="leading" id="UEn-g6-0Bs"/>
+                                    <constraint firstAttribute="trailing" secondItem="Lfc-We-Xbo" secondAttribute="trailing" constant="32" id="X7H-Nk-pfB"/>
+                                    <constraint firstItem="BWZ-T3-mnG" firstAttribute="top" secondItem="5fd-7f-N98" secondAttribute="bottom" constant="16" id="YYf-kq-EqR"/>
+                                    <constraint firstItem="BP9-QS-mSD" firstAttribute="top" secondItem="8Ko-xI-MJ2" secondAttribute="top" constant="8" id="ZNM-CM-UwA"/>
+                                    <constraint firstItem="BP9-QS-mSD" firstAttribute="leading" secondItem="8Ko-xI-MJ2" secondAttribute="trailing" constant="16" id="avD-rk-1Fg"/>
+                                    <constraint firstItem="CFD-xs-Zd8" firstAttribute="top" secondItem="BWZ-T3-mnG" secondAttribute="bottom" constant="24" id="dVT-01-xDz"/>
+                                    <constraint firstAttribute="bottom" secondItem="CFD-xs-Zd8" secondAttribute="bottom" constant="16" id="iqv-Un-JGl"/>
+                                    <constraint firstItem="J46-XW-P9y" firstAttribute="leading" secondItem="CFD-xs-Zd8" secondAttribute="trailing" constant="72" id="jXL-Pd-fZk"/>
+                                    <constraint firstItem="bZg-Ve-I2M" firstAttribute="leading" secondItem="rjs-Lh-cOl" secondAttribute="leading" constant="180" id="kb5-hP-DP3"/>
+                                    <constraint firstItem="Gdh-nk-aRE" firstAttribute="leading" secondItem="J46-XW-P9y" secondAttribute="trailing" constant="72" id="lwr-f5-htd"/>
+                                    <constraint firstItem="8Ko-xI-MJ2" firstAttribute="leading" secondItem="rjs-Lh-cOl" secondAttribute="leading" constant="16" id="oBJ-DJ-p6L"/>
+                                    <constraint firstItem="8Ko-xI-MJ2" firstAttribute="top" secondItem="rjs-Lh-cOl" secondAttribute="top" constant="16" id="qjo-Ep-DZq"/>
+                                    <constraint firstItem="Lfc-We-Xbo" firstAttribute="leading" secondItem="8Ko-xI-MJ2" secondAttribute="leading" id="rnK-4e-cHC"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="53N-lV-XRJ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="rjs-Lh-cOl" firstAttribute="leading" secondItem="53N-lV-XRJ" secondAttribute="leading" id="97u-es-gMZ"/>
+                            <constraint firstItem="53N-lV-XRJ" firstAttribute="trailing" secondItem="rjs-Lh-cOl" secondAttribute="trailing" id="H4F-JC-bk5"/>
+                            <constraint firstItem="rjs-Lh-cOl" firstAttribute="top" secondItem="53N-lV-XRJ" secondAttribute="top" constant="56" id="Sy5-TO-Ip5"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="GCN-aU-ysU"/>
                     <connections>
